# deepresearch-agent

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  text_AI_trends_in_Indonesia_2025_20260504_121213.json  text_AI_trends_in_Indonesia_2025_analysis_20260504_121228.json  text_AI_trends_in_Indonesia_2025_analysis_news_latest_20260504_121230.json  text_AI_trends_in_Indonesia_2025_expert_opinions_20260504_121233.json  text_AI_trends_in_Indonesia_2025_expert_opinions_news_latest_20260504_121237.json  text_AI_trends_in_Indonesia_2025_news_latest_20260504_121215.json  text_AI_trends_in_Indonesia_2025_overview_20260504_121217.json  text_AI_trends_in_Indonesia_2025_overview_news_latest_20260504_121219.json  text_AI_trends_in_Indonesia_2025_recent_news_20260504_121223.json  text_AI_trends_in_Indonesia_2025_recent_news_news_latest_20260504_121225.json
deepresearch/: __init__.py  cli.py  models.py  telegram_bot.py
deepresearch/agents/analyst/: analyst.py
deepresearch/agents/critic/: critic.py
deepresearch/agents/planner/: planner.py
deepresearch/agents/researcher/: researcher.py
deepresearch/agents/writer/: writer.py
deepresearch/api/: main.py
deepresearch/core/: engine.py
deepresearch/sources/web/: search.py
tests/: test_engine.py
